2001-12-14  Seth Nickell  <snickell@stanford.edu>

	* applet.c: (applet_callback_callback):
	* menu-properties.c: (get_real_menu_path):
	* menu.c: (init_menus), (add_menu_to_panel), (create_system_menu),
	(make_add_submenu), (make_panel_submenu):
	* session.c: (session_init_user_applets),
	(session_init_user_panels):

	Change to using "applications:/" rather than "programs:/"
	
2001-12-14 Stephen Browne <stephen.browne@sun.com>

	* gnome-panel-properties.c, gnome-panel-properties.glade,
	  gnome-panel-properties.glade.h

	  Removed keep menus in memory option (always on now)
	  Removed Confirm panel removal option (always on now)

Thu Dec 13 15:30:01 2001  George Lebl <jirka@5z.com>

	* launcher.c: some fixes in getting/setting locale specific
	  name/comment

2001-12-13  Glynn Foster  <glynn.foster@sun.com>

	* launcher.c, main.c, session.c: Remove PER_SESSION cruft
	that just confuses me.

Wed Dec 12 23:35:46 2001  George Lebl <jirka@5z.com>

	* session.c: doh, remove a debugging g_print

Wed Dec 12 23:33:33 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, session.c, panel-config-global.h,
	  gnome-panel-properties.c, panel-global-config.schemas,
	  gnome-panel-properties.glade:  Remove the user large icons,
	  avoid collissions and merge menus config options and keys and
	  all that.  large icons were gone already, merged menus as well,
	  and who would ever want to turn off collision avoidance.  Also
	  fix some memleaks and some cleanups.

	* foobar-widget.c: fix memleaks

Wed Dec 12 12:47:38 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: reposition menu after hiding an item

	* menu.[ch]: the keys for icons and tearoffs are now defined in the
	  menu.h as a define.  Also setup keys on the menu to display
	  the current state of the icons/tearoffs key at the time the menu
	  was created so that we can recreate it if it changes.  Doesn't yet
	  work everywhere, only for menus that use check_reread
