@@ -1,3 +1,10 @@
+2001-12-14  Satan
+
+	* menu.c: (panel_menu_have_icons):
+
+	Disable GConf and make the panel menu icons actually work.
+	Spit out one g_warning as penance.
+
 2001-12-14  Seth Nickell  <snickell@stanford.edu>
 
 	* applet.c: (applet_callback_callback):
